--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "fianly",
   "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --configuration production",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:Fianly": "node dist/fianly/server/server.mjs"
-  },
+"scripts": {
+  "ng": "ng",
+  "start": "ng serve",
+  "build": "ng build --configuration production",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test",
+  "build:ssr": "ng build --prod && ng run Fianly:server",
+  "serve:ssr": "node dist/fianly/server/main.js",
+  "dev:ssr": "ng run Fianly:serve-ssr",
+  "serve:ssr:Fianly": "node dist/fianly/server/server.mjs"
+},
+
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.7",
